# archive

./: CHANGELOG  CNAME  README.md  app.yaml  cerdito.toml  getdnsrecords.html  getdnsrecords.py  index.html  ipup.py  manifest  params.json  pyproject.toml  setdnsrecord.py  tiapp.xml  update.py
Resources/: index.html
Resources/js/: mac-reopen.js  ti-hacks.js  utils.js
arch/: .gitignore  Makefile  README.md  config.json  config_base.json  config_base_x32.json  config_net.json  config_x32.json  config_x32.pkrvars.hcl  config_x64.json  config_x64.pkrvars.hcl  template.json  template_base_box_x32.json  template_base_box_x64.json  template_base_cloud_x32.json  template_base_cloud_x64.json  template_net_cloud_x64.json
arch-net/: Makefile  config.json  template_cloud_x64.json  template_x32.json  template_x64.json
arch/scripts/: base.sh
cerdito/: .gitignore  __main__.py  atlas.py  commands.py  config.py  main.py  pyproject.toml  version.py
cerdito/cerdito/: __init__.py  kubernetes.py
cf-ddns/: README.md  app.yaml  getdnsrecords.py  index.html  ipup.py  up.py
cf-ddns/css/: jsoneditor.css
initscripts/: README.md
initscripts/systemd/: gitlab-sidekiq.service
initscripts/sysv/: firewall
initscripts/upstart/: php-fastcgi.conf  redmine.conf  subsonic.conf  syncthing.conf
jamstash-gh-pages/: .gitignore  CNAME  index.html  params.json
jamstash-master/: manifest
runit/chrony/: run
runit/collectd/: run
runit/docker/: run
systemd/: gitlab-sidekiq.service  gitlab.service
sysv/: firewall
upstart/: redmine.conf  tomcat.conf
vagrant-packer/: README.md
(+39 files in other folders)
